<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/upgrade_title_tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/public_red"
        android:text="@string/upgrade_title"/>

    <TextView
        android:id="@+id/upgrade_msg_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:padding="20dp"
        android:text="@string/upgrade_title"/>

    <ProgressBar
        android:id="@+id/upgrade_pb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/layer_progress"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/upgrade_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/upgrade_cancle"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/upgrade_download_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/upgrade_download"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</LinearLayout>